fixed the flickering bug, has nothing to do with js, its because the carousel div had a white background

--- a/public/stylesheets/scss/_view.scss
+++ b/public/stylesheets/scss/_view.scss
@@ -48,7 +48,6 @@ body .view-carousel{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.95);
     z-index: $z-third-level;
     opacity: 0;
     pointer-events: none;
