--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1822,7 +1822,6 @@ body .view-carousel {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.95);
   z-index: 300;
   opacity: 0;
   pointer-events: none;
